# rnd

./: CMakeLists.txt  README.md
include/rnd/: random.hpp
src/: random.cpp
